test/cli/test/images/verify-signature/kyverno-test.yaml
name: test-image-verify-signature
policies:
- policies.yaml
resources:
- resources.yaml
results:
- kind: DataVolume
  policy: check-data-volume-image
  resources:
  - unsigned-registry-image-datavolume
  result: fail
  rule: verify-signature
- kind: DataVolume
  policy: check-data-volume-image
  resources:
  - signed-registry-image-datavolume
  result: pass
  rule: verify-signature
- kind: Pod
  policy: check-image
  resources:
  - unsigned
  result: fail
  rule: verify-signature
- kind: Pod
  policy: check-image
  resources:
  - signed
  result: pass
  rule: verify-signature
